0.1 to 0.1.1
============

* add nr management for get_form method and auth method
* auth method now passing kwargs to get_form

0.1.1 to 0.2
============

* replace beautifoulsoup4 by lxml for parsing statics files

0.2 to 0.2.1
============

* added a minimal-browser for replacing mechanize

0.2.1 to 0.2.2
==============

* Improve minimal-browser, now handles features like :
    - auth
    - full session support
    - better form management
    - multiple select
    - bad action value for form tag

0.2.2 to 0.3
============

* Minimal browser ready
* Added more features to the browser
* resetting session for each thread at the end of the transaction forcing each user to have different session
* improve results writer for multiples custom timers in same test
* checked compatibility of the browser with python3.4
* 2to3 passed for browser, no change needed
* update GenericTransaction, now using custom browser
* Old GenericTransaction methods still unchanged
* Updated documentation examples for new browser
* Global documentation update

0.3 to 0.3.1
============

* Update requirements in setup for cssselect

0.3.1 to 0.3.2
==============

* Remove matplotlib from setup dependencies
* now using pygal for graphs renders
* updated multimechanize graph and results file
* now generating svg files for graph
* clean up dependencies globaly
* updated css file for graph size

0.3.2 to 0.3.3
==============

* refactore multi-mechanize core for python3
* compatibility for python3.4 started
* keep compatibility for python >= 2.7 using six
* added six to requirements
* tested basic functionality, all ok for both python 2.7 and python 3.4
* refactor most of the documentation
* update graph render

0.3.3 to 0.3.4
==============

* Global code cleaning
* improve python support
* update setup long_description
* update documentation
