@@ -1,0 +1,18 @@
+<!DOCTYPE html>
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>Test page</title>
+</head>
+<body>
+
+    <div id="content">
+        <a href="http://google.fr" id="test_link"></a>
+
+        <form action="/nothing.html" class="form">
+            <input type="text" name="test" value="OK"/>
+        </form>
+    </div>
+
+</body>
+</html>
